--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ data/top_model_files.rds
 Supplementary tables and figures.docx
 manuscript.docx
 ~$nuscript.docx
-output/brms_SEM.rds
+output/brms_SEM_respiration.rds
+code/*
