wflow_publish(c("analysis/juvenile_development.Rmd", "analysis/resistance.Rmd",     "analysis/respirometry.Rmd", "analysis/_site.yml"))

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -10,7 +10,7 @@ navbar:
   - text: Resistance
     href: resistance.html
   - text: Respirometry
-    href: metabolites.html
+    href: respirometry.html
   - text: Metabolites
     href: metabolites.html
   - text: License
